2004-12-09  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm: Add preliminary support for radial
	velocities and velocity frames. Add doppler correction
	calculation.

2004-12-08  Tim Jenness  <tjenness@cpan.org>

	* t/coco.t: Finish test comparison with coco for simple B1950
	coordinate	

	* lib/Astro/Coords.pm (native): Add native() method to keep track
	of original form.

2004-12-07  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm: Use Astro::Coords::Angle[::Hour] for all
	return values that return angles. Make public methods for
	returning pairs of coordinates (azel, radec,apparent).

	* lib/Astro/Coords.pm: Add radec1950 method

2004-12-04  Tim Jenness  <tjenness@cpan.org>

	* t/angle.t: Add tests for Angle classes
	
2004-11-21  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Planet.pm: Add diam() method to return the
	planet diameter. Also had support for defaulting the "horizon" for
	Sun and Moon rise/set times.

	* t/riseset.t: Many more tests of Sun and Moon elevations.

	* lib/Astro/Coords.pm: Moon rise and set times now working. This
	involves an iterative calculation.

2004-10-22  Tim Jenness  <timj@jach.hawaii.edu>

	* lib/Astro/Coords.pm (meridian_time): Add "nearest" to allow the
	search to track backwards. Use iterative technique to find the
	meridian time for fast moving objects (moon now works).
	(rise_time): Add "nearest" option to allow back tracking
	DateTime support now much tidier.
	

2004-10-20  Tim Jenness  <timj@jach.hawaii.edu>

	* lib/Astro/Coords.pm: Support DateTime

	* t/riseset.t: Include DateTime and Time::Piece tests

2004-04-19  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Angle.pm: Create

	* lib/Astro/Coords/Angle/Hour.pm: Create
	
2004-04-12  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Equatorial.pm (_ecllonglat): Add ecliptic
	latitude and longitude.

2004-02-27  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* lib/Astro/Coords/Equatorial.pm: Proper motions and parallax